<resources>
    <string name="app_name">Itau Notes</string>

    <!-- Login -->
    <string name="email_ed_hint_text">Email</string>
    <string name="password_ed_hint_text">Senha</string>
    <string name="login_bt_text">Login</string>
    <string name="login_empty_password_text">Informe uma senha</string>
    <string name="login_empty_email_text">Informe um email</string>
    <string name="login_error_text">Ocorreu um problema no Login, tente mais tarde</string>
    <string name="login_save_info_alert_content">Deseja salvar os dados de Login desse usuário?</string>
    <string name="login_save_info_alert_yes_bt">Sim</string>
    <string name="login_save_info_alert_no_bt">Não</string>

    <!-- Notes List -->
    <string name="notes_menu">Menu</string>
    <string name="notes_menu_exclude_all">Excluir Notas</string>
    <string name="notes_menu_logout">Logout</string>

    <!-- Notes Detail -->
    <string name="notes_detail_label">Titulo</string>
    <string name="notes_detail_title_hint">Informe um título</string>
    <string name="notes_detail_summary">Resumo</string>
    <string name="notes_detail_content">Descrição</string>
    <string name="notes_detail_save">Salvar Nota</string>
    <string name="notes_detail_empty_title">Informe pelo menos um Titulo.</string>
    <string name="notes_detail_save_success">Nota salva com sucesso</string>

</resources>
