<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/exclude_all"
        android:title="@string/notes_menu_exclude_all" />
    <item android:id="@+id/logout"
        android:title="@string/notes_menu_logout" />
</menu>