<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.presentation.view.LoginActivity">

   <TextView
       android:id="@+id/loginTittle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/app_name"
       android:textSize="30sp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="20dp"/>

   <EditText
       android:id="@+id/loginEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="@string/email_ed_hint_text"
       android:inputType="textEmailAddress"
       app:layout_constraintTop_toBottomOf="@+id/loginTittle"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       app:layout_constraintVertical_bias="0.2"/>

   <EditText
       android:id="@+id/passwordEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="@string/password_ed_hint_text"
       android:inputType="textPassword"
       app:layout_constraintTop_toBottomOf="@+id/loginEditText"
       app:layout_constraintStart_toStartOf="@+id/loginEditText"
       app:layout_constraintEnd_toEndOf="@+id/loginEditText"
       android:layout_marginTop="10dp"/>

   <Button
      android:id="@+id/loginButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintVertical_bias="0.1"
       android:text="@string/login_bt_text"/>

   <include
       android:id="@+id/loadingView"
       android:visibility="gone"
       layout="@layout/laoding_view_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>